# EdgeDetective

./: CMakeLists.txt  project2.out
output/: 10  doule.tga  hysterisi.tga  postGauss4.tga  postHysteresis4.tga  postSobel4.tga  postSuppression4.tga  prewitt.tga  sobel.tga
src/: button.h  main.cpp  menu.h  temp.tga  tga.h  tgaimg.cpp  tgaimg.h
